# docs/swagger.json
@@ -14,7 +14,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Get User v1"
+                    "Auth"
                 ],
                 "summary": "Get User",
                 "responses": {
@@ -35,9 +35,20 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Update User v1"
+                    "Auth"
                 ],
                 "summary": "Update User",
+                "parameters": [
+                    {
+                        "description": "Update User Request",
+                        "name": "user_update",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserUpdateReq"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -58,9 +69,20 @@
                     "application/json"
                 ],
                 "tags": [
-                    "LoginPhone v1"
+                    "Auth"
                 ],
                 "summary": "loginUser",
+                "parameters": [
+                    {
+                        "description": "Verification Key And SMS Request",
+                        "name": "verificationKey",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserCreateReq"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created",
@@ -81,9 +103,20 @@
                     "application/json"
                 ],
                 "tags": [
-                    "VerificationKey v1"
+                    "Auth"
                 ],
                 "summary": "verification for Phone",
+                "parameters": [
+                    {
+                        "description": "Phone Verification Request",
+                        "name": "phone_verification",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.PhoneVerificationReq"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -96,6 +129,14 @@
         }
     },
     "definitions": {
+        "dto.PhoneVerificationReq": {
+            "type": "object",
+            "properties": {
+                "phone": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.PhoneVerificationRes": {
             "type": "object",
             "properties": {
@@ -127,6 +168,17 @@
                 }
             }
         },
+        "dto.UserCreateReq": {
+            "type": "object",
+            "properties": {
+                "sms": {
+                    "type": "string"
+                },
+                "verification_key": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.UserCreateRes": {
             "type": "object",
             "properties": {
@@ -138,6 +190,26 @@
                 },
                 "user_type": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.UserUpdateReq": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         }
